# copsy

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.ja.md  README.md
.claude/skills/branch-naming/: SKILL.md
.claude/skills/create-pull-request/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: cli.rs  config.rs  git.rs  launcher.rs  main.rs  output.rs  spinner.rs  theme.rs
src/commands/: add.rs  close.rs  init.rs  interactive.rs  list.rs  mod.rs  pr.rs  remove.rs  status.rs  switch.rs
