[package]
name = "copsy"
version = "0.1.0"
edition = "2024"
description = "A git worktree management CLI"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
colored = "3"
console = "0.16"
indicatif = "0.18"
dirs = "6"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
